<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>Project_AIUS</groupId>
    <artifactId>AIUS</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Internal repo</name>
            <url></url>
        </repository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>12</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>12</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>12</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>12</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>12</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.9</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-elusive-pack</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>11.3.5</version>
            <exclusions>
                <exclusion>
                    <artifactId>ikonli-core</artifactId>
                    <groupId>org.kordamp.ikonli</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-entypo-pack</artifactId>
            <version>11.3.5</version>
            <exclusions>
                <exclusion>
                    <artifactId>ikonli-core</artifactId>
                    <groupId>org.kordamp.ikonli</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>Medusa</artifactId>
            <version>11.2</version>
            <exclusions>
                <exclusion>
                    <artifactId>javafx-base</artifactId>
                    <groupId>org.openjfx</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>javafx-graphics</artifactId>
                    <groupId>org.openjfx</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>javafx-controls</artifactId>
                    <groupId>org.openjfx</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.0-alpha1</version> <!-- 01-Oct-2019 -->
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>11.31</version>
        </dependency>
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.0.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <configuration>
                        <options>
                            <option>--add-opens</option>
                            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                            <option>--add-opens</option>
                            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        </options>
                    <mainClass>Project_AIUS.App</mainClass>
                    <launcher>launch.bat</launcher>
                    <compress>2</compress>
                    <jlinkZipName>aius</jlinkZipName>
                    <jlinkImageName>aius</jlinkImageName>
                    <noManPages>true</noManPages>
                    <noHeaderFiles>true</noHeaderFiles>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!-- fill this below with your class -->
                                    <mainClass>Project_AIUS.App</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
